--- a/practice.html
+++ b/practice.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>look mama i am using github.</h1>
-    <p>ami partesina</p>
+    <h1>Maryam Mahdiya Rafa</h1>
+    <h1>my family is my everything</h1>
+    <p>my one and only daughter</p>
+    <p>mahi ema rafa</p>
 
 </body>
 </html>
