--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>look mama i am using github.</h1>
     <p>this is not so easy</p>
-    <p>life is not a bed of roses.</p>
-    <p>honesty is the best policy</p>
+    <p>life is a bed of roses.</p>
+    <p>honesty is not a best policy</p>
 
 
 </body>
