--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>look mama i am using github.</h1>
     <p>ami partesina</p>
+    <p>life is not a bed of roses.</p>
+    <p>honesty is the best policy</p>
 
 </body>
 </html>
